--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@ button {
 <body>
 
 <div class="box">
-    <h1>شنو اسمچ بالجنسية  ؟ 🌹</h1>
-    <button id="yes" onclick="yesClick()">عيوطة</button>
-    <button id="no">عائــشة</button>
+    <h1>فستق اضغطي على كلمة حظ حتى يصير حظچ فووول    ؟ 🌹</h1>
+    <button id="yes" onclick="yesClick()">فگــر</button>
+    <button id="no">حــظ</button>
 </div>
 
 <script>
