--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@ button {
 <body>
 
 <div class="box">
-    <h1>شنو اسمچ بالجنسية؟ 🌹</h1>
-    <button id="yes" onclick="yesClick()">عيــوطــة</button>
-    <button id="no">عائــشة</button>
+    <h1> عيوطة انتي زعلانة ؟ 🌹</h1>
+    <button id="yes" onclick="yesClick()">لااااا ابد</button>
+    <button id="no">اييييي</button>
 </div>
 
 <script>
